Changelog
=========

1.2b5 - unreleased
------------------

* Add ajax_load hidden input to loaded forms.
  [smcmahon]

1.2b4 - 2010-12-05
------------------

* Add plone.app.testing / Selenium testing framework based on esteele's
  example.
  [smcmahon]

* noform and redirect options not passed to ajax form handlers in
  b1, b2, b3. Fixed.
  [smcmahon]


1.2b3 - 2010-12-30
------------------

* Some options not passed to ajax form handlers in b1, b2. Fixed.
  [smcmahon]

1.2b2 - 2010-12-29
------------------

* AJAX overlays broken in b1 due to plain stupidity. Will try to remember
  to always test after editing.
  [smcmahon]

1.2b1 - 2010-12-27
------------------

* Avoid creating overlay divs until needed; remove ajax overlay divs
  on close. Less DOM clutter.
  [smcmahon]

* Include both .min.js and .js versions of js resources to make life
  a little easier for folks who want to read the source. The .min.js
  versions will go into the browser resources.
  [smcmahon]

* Updated documentation so it reflect changes.
  [garbas]

* Updated jquerytools to 1.2.5. dateinput, rangeinput and validator
  plugins added as additional browser resources. Now all plugins from
  jquerytools are added with this package.
  [garbas]

* Added build script which builds js files from source (from github).
  [garbas]

* getContent does not exist in jqtools. It has been replaced by
  getOverlay. http://flowplayer.org/tools/forum/40/28687
  [naro]

1.1.2 - 2010-07-19
------------------

* Avoid use of genericsetup:upgradeSteps (plural), which doesn't work in Plone
  3.
  [davisagli]

1.1.1 - 2010-07-19
------------------

* Add 'description' parameter to upgrade step directives to fix breakage on
  Plone 3.
  [davisagli]

1.1 - 2010-07-18
----------------

* Add overlays.css. For Plone 3 only (it is disabled on installation in Plone
  4, and on upgrade from Plone 3 to Plone 4).
  [davisagli]

* Update license to GPL version 2 only.
  [hannosch]
