@@ -1,7 +1,9 @@
 import time
-
 import transaction
-from base import SeleniumTestCase
+import unittest2 as unittest
+
+from plone.app.testing.selenium_layers import SELENIUM_PLONE_FUNCTIONAL_TESTING
+from plone.app.testing.selenium_layers import open, click, type
 from plone.app.testing import PLONE_SITE_ID
 from plone.app.testing import TEST_USER_NAME, TEST_USER_PASSWORD, TEST_USER_ROLES
 from plone.app.testing import helpers
@@ -12,95 +14,86 @@ from plone.app.testing.interfaces import TEST_USER_ID
 # may be interrupting a js function (i.e., checking while it's running) and
 # thus catches the DOM in an changing state?
 
-class OverlayTestCase(SeleniumTestCase):
-        
+class OverlayTestCase(unittest.TestCase):
+    layer = SELENIUM_PLONE_FUNCTIONAL_TESTING
+       
+    def setUp(self):
+        self.driver = self.layer['selenium']
+        self.portal = self.layer['portal']
+        self.driver.implicitly_wait(5)
+
     def test_login_overlay(self):
         
-        sel = self.selenium
-	portal = self.portal
-
-        # Selenium 2.0 uses implicit waits for each find_element_by... calls
-	self.setWaitTimeout(5)
-
-        self.open(portal.absolute_url())
+        open(self.driver, self.portal.absolute_url())
         
         # test that click on log-in opens overlay
-        sel.find_element_by_id('personaltools-login').click()
+        click(self.driver, '#personaltools-login')
 	time.sleep(0.5) # sleep necessary after clicks
-        sel.find_element_by_css_selector('form#login_form')
-        sel.find_element_by_css_selector('div.overlay-ajax form#login_form')
-        sel.find_element_by_css_selector('#exposeMask')
-#	time.sleep(0.5)
+        self.driver.find_element_by_css_selector('form#login_form')
+        self.driver.find_element_by_css_selector('div.overlay-ajax form#login_form')
+        self.driver.find_element_by_css_selector('#exposeMask')
         
         # clicking anywhere else should close overlay
-        sel.find_element_by_id('exposeMask').click()
+        click(self.driver, '#exposeMask')
         time.sleep(0.5)
-        # Instead of ...
-        #     self.failIf(sel.is_element_present("id=login_form"))
-        # use ...
-        self.failIf(self.isElementPresent("login_form"))
+        self.failIf("login_form" in self.driver.get_page_source())
 
         # reload overlay
         time.sleep(1)
-        sel.find_element_by_id('personaltools-login').click()
+        click(self.driver, '#personaltools-login')
 	time.sleep(0.5)
-        sel.find_element_by_css_selector("#login-form")
+        self.driver.find_element_by_css_selector("#login-form")
         
         # click on empty form submit and look for error
         # in overlay
-        sel.find_element_by_name("submit").click()
+        self.driver.find_element_by_name("submit").click()
 	time.sleep(0.5)
-        sel.find_element_by_css_selector("dl.portalMessage.error")
-        sel.find_element_by_css_selector("div.overlay-ajax form#login_form")
+        self.driver.find_element_by_css_selector("dl.portalMessage.error")
+        self.driver.find_element_by_css_selector("div.overlay-ajax form#login_form")
         time.sleep(0.5)
-        #self.failUnless(sel.is_text_present("Error")) #portalMessage error
+        self.assertTrue("Error" in self.driver.get_page_source()) #portalMessage error
 
         # Now, try a real login
-        sel.find_element_by_name("__ac_name").send_keys(TEST_USER_NAME)
-        sel.find_element_by_name("__ac_password").send_keys(TEST_USER_PASSWORD)
+        type(self.driver, "__ac_name", TEST_USER_NAME)
+        type(self.driver, "__ac_password", TEST_USER_PASSWORD)
         # Instead of ...
         #     sel.click("submit")
         # find the element and then click, as in ...
-        sel.find_element_by_name("submit").click()
+        click(self.driver, "submit")
         time.sleep(5)
-        sel.find_element_by_id("personaltools-logout")
+        self.driver.find_element_by_id("personaltools-logout")
         time.sleep(0.5)
         # overlay should be gone
-#        self.failIf(sel.is_element_present("css=div.overlay-ajax form#login_form"))
-#        self.failIf(sel.find_element_by_css_selector("div.overlay-ajax form#login_form"))
-        self.failIf(self.isElementPresent("login_form"))
+#?        self.failIf(sel.is_element_present("css=div.overlay-ajax form#login_form"))
+#?        self.failIf(sel.find_element_by_css_selector("div.overlay-ajax form#login_form"))
+        self.failIf("login_form" in self.driver.get_page_source())
 
-        sel.find_element_by_id('user-name').click()
+        click(self.driver, '#user-name')
         time.sleep(0.5)
-        sel.find_element_by_link_text('Log out').click()
+        click(self.driver, 'link=Log out')
         time.sleep(5)
 
     def test_delete_confirm(self):
         # create a test target
-        portal = self.portal
-        helpers.setRoles(portal, TEST_USER_ID, ['Manager'])
-        portal.invokeFactory('Folder', 'f1')
+        helpers.setRoles(self.portal, TEST_USER_ID, ['Manager'])
+        self.portal.invokeFactory('Folder', 'f1')
         transaction.commit()
 
-        sel = self.selenium
-
-	self.setWaitTimeout(20)
-                
-        self.open(portal.absolute_url())
+        open(self.driver, self.portal.absolute_url())
 
         # log in
-        sel.find_element_by_id('personaltools-login').click()
+        click(self.driver, '#personaltools-login')
         time.sleep(0.2)
-        sel.find_element_by_css_selector("#login-form")
+        self.driver.find_element_by_css_selector("#login-form")
         time.sleep(0.5)
-        sel.find_element_by_name("__ac_name").send_keys(TEST_USER_NAME)
-        sel.find_element_by_name("__ac_password").send_keys(TEST_USER_PASSWORD)
-        sel.find_element_by_name("submit").click()
+        type(self.driver, "__ac_name", TEST_USER_NAME)
+        type(self.driver, "__ac_password", TEST_USER_PASSWORD)
+        click(self.driver, "submit")
         time.sleep(10)
-        sel.find_element_by_css_selector("#personaltools-logout")
+        self.driver.find_element_by_css_selector("#personaltools-logout")
         time.sleep(0.5)
 
-        sel.find_element_by_link_text("f1").click()
+        click(self.driver, "link=f1")
         time.sleep(5)
 
         # Note the following three examples fail to properly test the
@@ -109,41 +102,40 @@ class OverlayTestCase(SeleniumTestCase):
         #     sel.find_element_by_css_selector("dt.actionMenuHeader").click()
         #     sel.find_element_by_css_selector("dl#plone-contentmenu-actions.actionMenu").click()
         # instead we find all the drop down menus and ...
-        contentActionMenus = sel.find_elements_by_class_name("arrowDownAlternative")
+        contentActionMenus = self.driver.find_elements_by_class_name("arrowDownAlternative")
         # ... click on the Actions menu
         contentActionMenus[-1].click()
         time.sleep(2)
-        sel.find_element_by_id('delete').click()
+        click(self.driver, '#delete')
         time.sleep(2)
-        sel.find_element_by_css_selector("div.overlay-ajax form#delete_confirmation")
-        sel.find_element_by_css_selector("#exposeMask")
-        sel.find_element_by_name("form.button.Cancel").click()
+        self.driver.find_element_by_css_selector("div.overlay-ajax form#delete_confirmation")
+        self.driver.find_element_by_css_selector("#exposeMask")
+        click(self.driver, "form.button.Cancel")
         time.sleep(2)
 
         # Alternatively we can search on the partial link text.
         # Note you have to use the partial text in this case as
         # the full link text includes the <span> element
-        sel.find_element_by_partial_link_text("Actions").click()
+        click(self.driver, "link=Actions")
         time.sleep(0.5)
-        sel.find_element_by_id('delete').click()
+        click(self.driver, '#delete')
         time.sleep(2)
-#        sel.find_element_by_css_selector("div.formControls form#delete_confirmation form.button.Cancel")
         # Instead of ...
-#       #     sel.click("//input[@value='Delete']")
+        #     sel.click("//input[@value='Delete']")
         # use ...
-        sel.find_element_by_css_selector("input[value='Delete']").click()
+        self.driver.find_element_by_css_selector("input[value='Delete']").click()
 
         time.sleep(5)
 
         # Instead of ...
         #  sel.get_location()
         # use ...
-        self.failUnless(sel.current_url.rstrip('/').split('/')[-1] == PLONE_SITE_ID)
+        self.failUnless(self.driver.current_url.rstrip('/').split('/')[-1] == PLONE_SITE_ID)
 
-        self.failIf(self.isElementPresent("portaltab-f1"))
+        self.failIf("portaltab-f1" in self.driver.get_page_source())
         
-        sel.find_element_by_id('user-name').click()
+        click(self.driver, '#user-name')
         time.sleep(0.5)
-        sel.find_element_by_link_text('Log out').click()
+        click(self.driver, 'link=Log out')
         time.sleep(5)
 
