@@ -4,6 +4,9 @@ Changelog
 1.2b5 - unreleased
 ------------------
 
+* Refactoring selenium tests to use selenium layer's helper functions.
+  [emanlove]
+
 * Add ajax_load hidden input to loaded forms.
   [smcmahon]
 
